--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,8 @@ services:
         sync: false
       - key: FRONTEND_URL
         sync: false
+      - key: ADMIN_TOKEN
+        sync: false
       - key: VERIFICATION_CONFIRMATIONS
         value: 3
       - key: FEE_PERCENTAGE
